--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Free Company</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../jQuery/css/bootstrap.min.css">
-  <script src="../jQuery/js/jquery.min.js"></script>
-  <script src="../jQuery/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../jQuery/UT/css/bootstrap.min.css">
+  <script src="../jQuery/UT/js/jquery.min.js"></script>
+  <script src="../jQuery/UT/js/bootstrap.min.js"></script>
   <style>
   body {
     font: 400 15px Lato, sans-serif;
